--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Counter Application</title>
-    
+    <meta charset="utf-8">
+    <title>Basic App with Click Counter</title>
+	<script src="https://npmcdn.com/react@latest/dist/react.js"></script>
+	<script src="https://npmcdn.com/react-dom@latest/dist/react-dom.js"></script>
+
+    <!-- <script src="build/react.js"></script> -->
+    <!-- <script src="build/react-dom.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+    <!-- <script src="redux.js"></script> -->
+    <script src="https://npmcdn.com/redux@latest/dist/redux.js"></script>
+	<script src="https://npmcdn.com/react-redux@latest/dist/react-redux.js"></script>
   </head>
   <body>
-    
-    <div> </div>
-
-  
+    <div id="message" align="center"></div>
+	<script type="text/javascript" src="counter.js"></script>
+	<script type="text/babel" src="click.js"></script>
+	
   </body>
 </html>
+	
