Folder re-structure

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <div id="message" align="center"></div>
-	<script type="text/javascript" src="counter.js"></script>
-	<script type="text/babel" src="click.js"></script>
+	<script type="text/javascript" src="js/counter.js"></script>
+	<script type="text/babel" src="js/click.js"></script>
 	
   </body>
 </html>
