--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Basic App with Click Counter</title>
+   <link rel="stylesheet" type="text/css" href="css/app.css">
 	<script src="https://npmcdn.com/react@latest/dist/react.js"></script>
 	<script src="https://npmcdn.com/react-dom@latest/dist/react-dom.js"></script>
 
@@ -12,9 +13,10 @@
     <!-- <script src="redux.js"></script> -->
     <script src="https://npmcdn.com/redux@latest/dist/redux.js"></script>
 	<script src="https://npmcdn.com/react-redux@latest/dist/react-redux.js"></script>
+
   </head>
   <body>
-    <div id="message" align="center"></div>
+    <div id="message"> </div>
 	<script type="text/javascript" src="js/counter.js"></script>
 	<script type="text/babel" src="js/click.js"></script>
 	
